--- a/config/AASIST_ARNet_Hybrid.conf
+++ b/config/AASIST_ARNet_Hybrid.conf
@@ -1,43 +1,27 @@
 {
     "track": "LA",
-    "protocol": "ASVspoof2019.LA.cm.eval.trl.txt",
-    "feature_dir": "./features",
-    "database_path": "./data/ASVspoof2019_LA",
-    "dev_database_path": "./data/ASVspoof2019_LA",
-    "eval_database_path": "./data/ASVspoof2019_LA",
-    "output_dir": "./exp_result",
-    "model_path": "./models",
-    "num_epochs": 100,
-    "batch_size": 12,
-    "num_workers": 8,
-    "pin_memory": true,
-    "freq_aug": "True",
-    
+    "part": "A",
+    "seed": 1234,
+    "num_epochs": 5,
+    "batch_size": 8,
+    "database_path": "/kaggle/input/asvpoof-2019-dataset/LA/LA/",
+    "protocols_dir": "/kaggle/input/asvpoof-2019-dataset/LA/LA/ASVspoof2019_LA_cm_protocols",
     "model_config": {
         "architecture": "AASIST_ARNet_Hybrid",
-        "filts": [128, 128, 128, 128, 256, 512],
-        "gat_dims": [128, 128],
-        "pool_ratios": [10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10],
-        "temperatures": [2.0, 2.0],
-        "first_conv": 1024,
-        "input_freq_dim": 128,
-        
-        "ARNet_config": {
-            "mfcc_dim": 40,
-            "E_M_dim": 320,
-            "E_A_dim": 320,
-            "E_ARNet_dim": 640
-        }
+        "num_nodes": 4,
+        "is_hfirst": false,
+        "node_dim": 1024,
+        "conv_type": "gabor"
     },
-    
     "optim_config": {
-        "optimizer": "AdamW",
         "base_lr": 0.0001,
-        "weight_decay": 0.00001,
-        "scheduler": "cosine",
-        "swa_start": 80,
-        "swa_freq": 1,
-        "swa_lr": 0.00001,
-        "momentum": 0.9
+        "lr_min": 0.000001,
+        "scheduler": "cosine_annealing",
+        "weight_decay": 0.0001
+    },
+    "model_weights": null,
+    "eval": {
+        "model_weights": null,
+        "protocols_dir": "/kaggle/input/asvpoof-2019-dataset/LA/LA/ASVspoof2019_LA_cm_protocols"
     }
 }
